[FIX] alignment of header for calendar.

--- a/addons/view_calendar/static/css/calendar.css
+++ b/addons/view_calendar/static/css/calendar.css
@@ -364,6 +364,11 @@ td#calSidebar {
 
 #calGroups dt table {
 	border: none;
+	font-weight: bold;
+}
+
+#calGroups dt table td {
+	text-align: center;
 }
 
 #calGroups dt a {
@@ -382,8 +387,12 @@ td#calSidebar {
     color: black;
 }
 
+table#calSidebar-sidebar {
+	border: none;
+}
+
 ul.ul_calGroups {
-	list-style: none; margin: 0 0 10px; padding: 0;
+	list-style: none; margin: 0 0 10px; padding: 0; font-size: 0.9em;
 }
 
 ul.ul_calGroups li {
